# sm-translate

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
config/: config.yml  languages.cfg
src/smtranslate/: classes.py  cli.py  parser.py
